added navbar, added styles css to cards

--- a/Stylesheets/common.css
+++ b/Stylesheets/common.css
@@ -1,12 +1,18 @@
-:root {
+/* :root {
 	font-size: 16px;
 	--root-size: 1.2rem;
 }
 
-* {
-	margin-top: 1em;
-}
+/* * {
+	margin-top: 0.3em;
+} */
 
-body {
-	font-size: var(--root-size);
-}
+
+/* @media (min-width:430px){
+	:root{
+		--font-size:16px;
+		--side-padding:50px;
+	}
+
+	 */
+} */
