--- a/Stylesheets/article-2.css
+++ b/Stylesheets/article-2.css
@@ -1,33 +1,145 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
 
 h1{
-	font-size:2rem;
+	font-family:"Fraunes", serif;
+	font-size:5rem;
+	font-weight:bold;
+	padding:3rem;
 }
 
-.author-info {
+/* nav-bar */
+nav{
+	background-color:black;
+}
+nav a {
+	font-family:"nunito",sans-serif;
+	font-size:1rem;
+	color:white;
+	padding:3rem;
+}
+
+.left-nav{
+	display:inline;
+}
+
+.right-nav{
+	display:inline;
+	float:right;
+}
+
+.right-nav ul{
+	display:none;
+}
+
+
+.right-nav, .right-nav ul{
+	list-style-type: style none;
+	background-color:white;
+	color:black;
+}
+
+.right-nav li{
+	float: left;
+	position: relative;
+	width:100%;
+}
+
+.right-nav ul{
+	position: absolute;
+	display:none;
+	width:100%;
+}
+
+.right-nav ul li{
+	float:none;
+}
+
+.right-nav a:link, .right-nav a:visited {
+	display: block;
+	font-family: 'poppins', sans-serif;
+	font-size: 0.75em;
+	text-align: left;
+	text-decoration: none;
+	color: #000;
+	}
+
+.right-nav li:hover {
+	background-color:grey;
+	}
+
+.right-nav li:hover ul{
+	display: block;
+}
+
+.article-info{
 	display: flex;
 	flex-direction:row;
+	font-family:"nunito",sans-serif;
+	font-size:1.5rem;
+	padding:3rem;
+	gap:3rem;
 }
 
-.author-info>*>*{
-	margin-top:0px;
-	margin-bottom:0px;
+.article-info>*>*{
+	margin-top:0.5rem;
+	margin-bottom:0.5rem;
 }
 
-.author {
-	display: flex;
-	flex-direction: column;
-	gap:1px;
+.article-author{
+	display:flex;
+	flex-direction:column;
 }
 
 .original-text{
-	display: flex;
-	flex-direction: column;
-	gap:1px;
+	display:flex;
+	flex-direction:column;
 }
 
-#gradient-box{
-	background:red;
-	width:100%;
-	height:300px;
+#author-name{
+	font-weight:500;
 }
+
+#article-link{
+	font-weight:500;
+}
+
+.section-header{
+	position:sticky;
+	top: 0;
+	padding:2rem;
+	background-color:black;
+	color:white;
+}
+.emphasis-word{
+	background-color:yellow;
+	opacity: 70%;
+	border-radius:1rem;
+}
+
+.emphasis-paragraphs{
+	margin-left:13rem;
+	max-width:47rem;
+}
+
+p{
+	font-family:"nunito",sans-serif;
+	margin:3rem;
+}
+
+
+#gradient-box{
+	background-image:linear-gradient(#FF72EA,#1D85F5);
+	width:54rem;
+	height: 40rem;
+	margin-left:3rem;
+}
+
+/* #gradient-box2{
+	background-image:linear-gradient(rgb(231, 231, 60),#70adef);
+	width:54rem;
+	height: 10rem;
+	margin-left:3rem;
+} */
 
