--- a/Stylesheets/article-3.css
+++ b/Stylesheets/article-3.css
@@ -1,40 +1,77 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rye&family=Space+Grotesk&display=swap');
 
+*{
+	background-color:beige;
+}
 .nav{
-	font-family:'Space Grotesk', serif;
-	font-size:1.4rem;
+	font-family:"Space Grotesk",serif;
+	font-size:1rem;
+	margin:2rem;
 	display:flex;
 	justify-content:space-between;
-	align-items: center;
 	flex-direction:row;
 	text-transform: uppercase;
 }
 
-header nav{
-	margin: 
-	padding:16px;
-}
-
 h1{
 	font-family:'Space Grotesk', serif;
-	font-size:2rem;
-	text-align: left;
+	font-size:4rem;
+	color:#121212;
+	margin:2.5rem;
 }
 
-@media (min-width:400px){
-
-h1{
-	padding:2rem;
-	font-size:5rem;
+.heading-art{
+	font-family:"Rye", serif;
 }
-.nav{
+
+p{
+	font-family:"Roboto Mono", monospace;
+	font-size:1rem;
+	line-height:1.5rem;
+	margin:2.5rem;
+}
+
+p:nth-child(1){
+	margin:rem;
+}
+
+.subtext{
+	background-color:white;
+	outline-style:solid;
+	outline-color: #121212;
+	border-radius: 5px;
 	font-family:'Space Grotesk', serif;
-	font-size:1.1rem;
-	display:flex;
+	line-height:1.7rem;
+	padding:1.5rem;
+	margin:2.5rem;
+}
+
+.sticky-header{
+	position:sticky;
+	top: 0;
+	z-index:0;
+}
+
+h2{
+	background-color:white;
+	outline-style:solid;
+	outline-color:#121212
+	color:rgb(82, 58, 7);
+	padding:1.5rem;
+}
+
+.bottom-nav{
+	overflow: hidden;
+	outline-style:solid;
+	outline-color:#121212;
+	border-radius: 5px;
+	position:fixed
+	bottom:0;
 	justify-content:space-between;
-	align-items: center;
-	flex-direction:row;
-	text-transform: uppercase;
+	font-family:"Space Grotesk",serif;
+	font-size:1.5rem;
 }
