--- a/Stylesheets/article-2.css
+++ b/Stylesheets/article-2.css
@@ -1,12 +1,77 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap'); */
 
-h1{
-	font-family:"Fraunes", serif;
-	font-size:5rem;
-	font-weight:bold;
-	padding:3rem;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Honk&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+article{
+	background: linear-gradient(270deg, #b2e4f7, #f3ccf7);
+
+	-webkit-animation: background-color 2s ease infinite;
+	-moz-animation: background-color 2s ease infinite;
+	animation: background-color 2s ease infinite;
+}
+
+	@-webkit-keyframes background-color {
+	0%{background-position:0% 50%}
+	50%{background-position:100% 50%}
+	100%{background-position:0% 50%}
+	}
+@-moz-keyframes background-color {
+	0%{background-position:0% 50%}
+	50%{background-position:100% 50%}
+	100%{background-position:0% 50%}
+}
+
+@keyframes background-color {
+	0%{background-position:0% 50%}
+	50%{background-position:100% 50%}
+	100%{background-position:0% 50%}
+}
+
+body {
+	margin: 0;
+	height: 100vh;
+}
+
+.title{
+	font-family:"poppins", sans-serif;
+	color: #3c3c3c;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	flex-direction: column;
+}
+
+@keyframes textShine {
+	0% {
+		background-position: 0% 50%;
+	}
+	100% {
+		background-position: 100% 50%;
+	}
+}
+
+h1 {
+	font-family:"poppins",sans-serif;
+	font-size:8rem;
+	padding-left:3rem;
+	font-size: clamp(2.8rem, 1.5vw, 3rem);
+	background: linear-gradient(
+	  to right,
+	  #7953cd 20%,
+	  #00affa 30%,
+	  #0190cd 70%,
+	  #764ada 80%
+	);
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+	text-fill-color: transparent;
+	background-size: 500% auto;
+	animation: textShine 5s ease-in-out infinite alternate;
 }
 
 /* nav-bar */
@@ -20,6 +85,12 @@ nav a {
 	padding:3rem;
 }
 
+#title{
+	font-family:"Honk", serif;
+	font-size:10rem;
+}
+
+/* nav bar */
 .left-nav{
 	display:inline;
 }
@@ -135,11 +206,15 @@ p{
 	height: 40rem;
 	margin-left:3rem;
 }
+.quote-popup{
+	position:sticky;
+	top:0%;
+	height:100vh;
+	left:0;
+	width:100vw;
+	background-color:transparent;
+	z-index:-2;
+	transition:0.5s;
+}
 
-/* #gradient-box2{
-	background-image:linear-gradient(rgb(231, 231, 60),#70adef);
-	width:54rem;
-	height: 10rem;
-	margin-left:3rem;
-} */
 
