--- a/Stylesheets/article-3.css
+++ b/Stylesheets/article-3.css
@@ -2,7 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rye&family=Space+Grotesk&display=swap');
 
 *{
 	background-color:beige;
@@ -74,4 +73,24 @@ h2{
 	justify-content:space-between;
 	font-family:"Space Grotesk",serif;
 	font-size:1.5rem;
+}
+
+blockquote:hover{
+	color:#121212;
+}
+
+blockquote p{
+	transition:0.5s;
+}
+
+blockquote p:hover{
+	color:white;
+	background-color:#121212;
+	outline-style:solid;
+	outline-color:white;
+	rotate:2deg;
+}
+
+blockquote:hover .quote-popup{
+	background-color:black;
 }
