--- a/Stylesheets/homepage.css
+++ b/Stylesheets/homepage.css
@@ -1,12 +1,23 @@
 
-/* font-face */
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet"');
+/* typefaces */
+@import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+
 
 :root{
 	--font-family:'Poppins', sans-serif;
 	--spacing:20px;
-	--heading-one:3rem;
+	--heading-one:5rem;
 }
+
+.project-title{
+	font-family: "Poppins", sans-serif;
+	font-weight: 900;
+}
+
 
 /* general styles */
 body{
@@ -15,13 +26,14 @@ body{
 	margin:auto;
 }
 
-	/* headings */
-	h1{
-	font-family: var(--font-family);
+
+h1{
+	font-family:"Happy Monkey", system-ui;
 	font-size: var(--heading-one);
-		font-weight:bolder;
-		color:white;
-	}
+	font-weight:bold;
+	Color:white;
+}
+
 
 	h2{
 		font-family:'poppins', sans-serif;
@@ -47,6 +59,45 @@ nav{
 	padding-left:1.5rem;
 	padding-right:1.5rem;
 }
+
+/* .intro-animation{
+	color:white;
+	font-size:1.2rem;
+	line-height:1.8rem;
+	padding-top:3rem; */
+
+
+	/* intro-animation */
+
+.intro{
+	position: relative;
+	width:100%;
+	margin: 0 auto;
+	border-right: 2px solid rgba(255,255,255,.75);
+	font-size:1.2rem;
+	line-height:1.8rem;
+	text-align: center;
+	white-space: nowrap;
+	overflow: hidden;
+	transform: translateY(-50%);    
+	padding-top:4rem;
+}
+
+.intro-animation{
+animation: 
+	typewriter 4.5s steps(50) 1s 1 normal both, 
+	blinkingCursor 500ms steps(50) infinite normal;
+	}
+
+@keyframes typewriter {
+  from { width: 0; }
+  to { width: 100%; }
+}
+@keyframes blinkingCursor{
+  from { border-right-color: rgba(255,255,255,.75); }
+  to { border-right-color: transparent; }
+}
+
 
 .left-nav{
 	display:inline;
@@ -149,12 +200,6 @@ nav{
 	background-color:greenyellow;
 } */
 
-.intro{
-	color:white;
-	padding-bottom:5rem;
-}
-
-
 /* cards */
 .cards{
 	display: flex;
@@ -175,20 +220,7 @@ nav{
 	padding-left:30px;
 	padding-bottom:30px;
 }
-
-
-mobile media query 
-@media (min-width:400px){
 	
-	
-
-	.intro{
-		padding-top:3rem;
-		font-size:1rem;
-		line-height:1.5rem;
-	}
-	
-
 .cards{
 	display: flex;
 	flex-direction:column;
@@ -238,9 +270,9 @@ footer{
 		padding-bottom:0px;
 	}
 	.intro{
+		color:white;
 		font-size:1.2rem;
 		line-height:1.5rem;
-		max-width:50rem;
 	}
 
 	.cards{
