Fixed linking issue

--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -8,9 +8,12 @@ body{
 	padding-left: 100px;
 	padding-top:5px;
 	text-align: start;
+	border: solid white 30px;
 }
 
-
+section{
+	background-color:white;
+}
 em{
 	font-style: italic;
 }
@@ -29,6 +32,7 @@ p:nth-child(even){
 	margin-top:20px;
 	margin-bottom:20px;
 }
+
 
 /*paragraph styles*/
 blockquote{
@@ -71,6 +75,14 @@ footer{
 	padding-left:auto;
 }
 
+summary{
+	background-color:white;
+	color:black;
+	border-radius:2rem;
+	padding:3rem;
+	margin-top:2rem;
+	max-width:70rem;
+}
 /*author and titles styles*/
 .author-title{
 	font-size:1.2rem;
@@ -109,6 +121,7 @@ footer{
 	font-family:'Space Grotesk', serif;
 	line-height:1.7rem;
 	padding:1.5rem;
+	max-width:20rem;
 }
 
 /*article-and-reading-response-styles*/
