--- a/Stylesheets/homepage.css
+++ b/Stylesheets/homepage.css
@@ -1,23 +1,26 @@
 
 /* typefaces */
-@import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* paragraph-fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
 
 :root{
-	--font-family:'Poppins', sans-serif;
-	--spacing:20px;
-	--heading-one:5rem;
+	--font-family:'Space Grotesk', serif;
+	--font-paragraph:font-family: "Roboto Mono", monospace;
+
+	--h1:font-size:5rem;
+
+	--background-color:beige;
 }
 
-.project-title{
-	font-family: "Poppins", sans-serif;
-	font-weight: 900;
-}
 
+*{
+	background-color: beige;
+}
 
 /* general styles */
 body{
@@ -26,12 +29,11 @@ body{
 	margin:auto;
 }
 
-
 h1{
-	font-family:"Happy Monkey", system-ui;
-	font-size: var(--heading-one);
+	font-family:"Space Grotesk", serif;
+	font-size:4rem;
 	font-weight:bold;
-	Color:white;
+	Color:#121212;
 }
 
 
@@ -42,8 +44,8 @@ h1{
 		font-weight:bold;
 	}
 header{
-	background-color: black;
-	padding:3rem;
+	background-color: beige;
+	padding-left:3rem;
 }
 
 nav{
@@ -52,52 +54,13 @@ nav{
 	font-family:'poppins';
 	font-weight:500px;
 	line-height: 50px;
-	background-color: white;
+	background-color: beige;
 	color:black;
 	margin-left;
 	z-index:1; 
 	padding-left:1.5rem;
 	padding-right:1.5rem;
 }
-
-/* .intro-animation{
-	color:white;
-	font-size:1.2rem;
-	line-height:1.8rem;
-	padding-top:3rem; */
-
-
-	/* intro-animation */
-
-.intro{
-	position: relative;
-	width:100%;
-	margin: 0 auto;
-	border-right: 2px solid rgba(255,255,255,.75);
-	font-size:1.2rem;
-	line-height:1.8rem;
-	text-align: center;
-	white-space: nowrap;
-	overflow: hidden;
-	transform: translateY(-50%);    
-	padding-top:4rem;
-}
-
-.intro-animation{
-animation: 
-	typewriter 4.5s steps(50) 1s 1 normal both, 
-	blinkingCursor 500ms steps(50) infinite normal;
-	}
-
-@keyframes typewriter {
-  from { width: 0; }
-  to { width: 100%; }
-}
-@keyframes blinkingCursor{
-  from { border-right-color: rgba(255,255,255,.75); }
-  to { border-right-color: transparent; }
-}
-
 
 .left-nav{
 	display:inline;
@@ -160,9 +123,12 @@ animation:
 	gap:2rem;
 	margin:auto;
 	padding:2rem;
-	background-color:black;
+	background-color: beige;
 }
 .cardlink{
+	outline-style:solid;
+	outline-color: #121212;
+	border-radius:1rem;
 	display:grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 2fr 3fr 1fr;
@@ -172,7 +138,7 @@ animation:
 }
 
 .cardlink:nth-child(1){
-	background-color:greenyellow;
+	background-color:beige;
 }
 
 
@@ -252,12 +218,18 @@ footer{
 	}
 	
 	h1{
-		font-family:'poppins', sans-serif;
-		font-weight:bolder;
-		font-size:10rem;
-		max-width:30rem;
+		font-family:"Space Grotesk", serif;
+		font-weight:bold;
+		font-size:8rem;
+		padding-top:2rem;
 	}
 
+	h2{
+		font-family:"Space Grotesk", serif;
+		font-size:1.5rem;
+		font: weight 800;
+		margin-left:2rem;	
+	}
 	footer{
 		padding-left:3rem;
 	}
@@ -267,10 +239,15 @@ footer{
 		padding-top:0px;
 		padding-bottom:0px;
 	}
+
 	.intro{
-		color:white;
-		font-size:1.2rem;
-		line-height:1.5rem;
+		font-family:"Roboto Mono", monospace;
+		font-size:1.1rem;
+		line-height:2rem;
+		color:#121212;
+		max-width:900px;
+		padding-top:2rem;
+		padding-bottom:4rem;
 	}
 
 	.cards{
@@ -336,13 +313,16 @@ footer{
 		padding:2rem;
 	}
 
-	.cardlink:nth-child(2){
-		background-color:rgb(255, 47, 193);
+	.cardlink{
+			width: 250px;
+			height: 250px;
+			background-color: rgba(255, 255, 255, 1);
+			color: #000;
+			border-radius: 10px;
+			box-shadow: 0px 0px 0px 2px rgba(218,102,123,1),
+		8px 8px 0px 0px rgba(218,102,123,1);
 	}
-	
-	.cardlink:nth-child(3){
-		background:rgb(153, 153, 252);
-	}
+
 	
 	/* .dropdown-content a{
 		color:black;
