added new css styling to article 1 and worked on desktop mode for article 3

--- a/Stylesheets/article-3.css
+++ b/Stylesheets/article-3.css
@@ -2,13 +2,41 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk&display=swap');
 
+:root{
+	/* colors */
+	--background-color:beige;
+	--text-color:#121212;
 
-*{
-	background-color:beige;
+	/* typefaces */
+	--font-family:"Space Grotesk",serif;
+	--nav-font-size:1rem;
+	--h1-font-size:1rem;
 }
-.nav{
-	font-family:"Space Grotesk",serif;
+body{
+	background-color: var(--background-color);
+}
+
+h1{
+	font-family:var(--font-family);
+	font-size:4rem;
+	color:#121212;
+	margin:1.5rem;
+}
+
+.heading-art{
+	font-family:'Space Grotesk', serif;
+}
+
+p{
+	font-family:"Roboto Mono", monospace;
 	font-size:1rem;
+	line-height:1.8rem;
+	margin-left:1.5rem;
+	margin-right:0.6rem;
+}
+.header{
+	font-family:var(--font-family);
+	font-size:var(--nav-font-size);
 	margin:2rem;
 	display:flex;
 	justify-content:space-between;
@@ -16,37 +44,61 @@
 	text-transform: uppercase;
 }
 
-h1{
-	font-family:'Space Grotesk', serif;
-	font-size:4rem;
-	color:#121212;
-	margin:2.5rem;
-}
-
-.heading-art{
-	font-family:"Rye", serif;
-}
-
-p{
-	font-family:"Roboto Mono", monospace;
-	font-size:1rem;
-	line-height:1.5rem;
-	margin:2.5rem;
-}
-
-p:nth-child(1){
-	margin:rem;
-}
-
-.subtext{
+/* NAV BAR */
+.nav-container {
+	overflow: hidden;
+	display: flex;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
 	background-color:white;
+	outline-style:solid;
+	outline-color:#121212;
+	border-radius:4px;
+}
+
+.nav-item {
+	background-color: white;
+	justify-content: center;
+	padding:1rem;
+	text-align: center;
+	font-size:1.3rem;
+}
+
+.article-info{
+	display: flex;
+	flex-direction:row;
+	font-family:"nunito",sans-serif;
+}
+
+
+
+/* p:nth-child(odd){
+	padding-bottom:2rem;
+} */
+
+details{ 
+	margin:1rem;
+	background-color:#121212;
+	color:white;
+	padding:1rem;
+	border-radius:5px;
+	font-family: 'Space Grotesk', serif;
+	margin:1.5rem;
+} 
+
+.intro{
+	background-color:white;
+	color:rgb(198, 13, 118);
 	outline-style:solid;
 	outline-color: #121212;
 	border-radius: 5px;
 	font-family:'Space Grotesk', serif;
 	line-height:1.7rem;
-	padding:1.5rem;
-	margin:2.5rem;
+	padding:1rem;
+	margin-left:1rem;
 }
 
 .sticky-header{
@@ -75,8 +127,20 @@ h2{
 	font-size:1.5rem;
 }
 
+blockquote{
+	background-color:white;
+	padding:0.3rem;
+	border-left:8px solid rgba(218, 102, 123, 1);
+	border-radius:5px;
+}
+
 blockquote:hover{
-	color:#121212;
+	background-color:white;
+	padding:0.3rem;
+	border-left:8px solid #52b9d5 ;
+	border-radius:5px;
+	transition:0.5s;
+	rotate:2deg;
 }
 
 blockquote p{
@@ -84,13 +148,138 @@ blockquote p{
 }
 
 blockquote p:hover{
-	color:white;
-	background-color:#121212;
-	outline-style:solid;
-	outline-color:white;
+	background-color:#white;
+	color:black;
 	rotate:2deg;
 }
 
 blockquote:hover .quote-popup{
 	background-color:black;
 }
+
+/* #hover-title:{
+ a:link { text-decoration: none;};
+ a:visited {text-decoration:black};
+ a:hover {text-decoration: red;};
+ a:active{text-decoration: red;};
+} */
+#question{
+	font-weight:bold;
+	color:rgba(218, 102, 123, 1);
+}
+/* MEDIA QUERIES */
+@media (min-width:650px){
+details{
+	max-width:20rem;
+	margin-top:0rem;
+	}
+
+@media (min-width:1024px){
+
+h1{
+	font-size:8rem;
+	line-height:7.5rem;
+	}
+
+h2{
+	border-radius:1rem;
+}
+
+p{
+	max-width:55rem;
+	margin:2rem;
+}
+
+/* table of content */
+details{
+	max-width:20rem;
+	margin-top:0rem;
+}
+
+/* ul #section1: visited{
+	color:white;
+}
+
+ul #section1:hover{
+	color:white;
+} */
+
+/* blockquote */
+blockquote{
+	max-width:33rem;
+	margin-left:30rem;
+}
+
+.hover-texts:hover{
+	font-size:1.2rem;
+	color:#52b9d5;
+}
+
+/* class stylings */
+.article-info{
+	margin-left:1rem;
+}
+.intro{
+	max-width:32rem;
+	margin-left:30rem;
+	margin-top:3rem;
+	margin-bottom:2rem;
+	padding:1.4rem;
+	background-color: rgba(255, 255, 255, 1);
+	color: #000;
+	border-radius:8px;
+	box-shadow: 0px 0px 0px 2px rgba(218,102,123,1),
+		8px 8px 0px 0px rgba(218,102,123,1);
+	
+}
+
+.speech-bubble {
+	position: relative;
+	padding:1.2rem;
+	background: #fefefe;
+	outline-style:solid;
+	outline-color:rgb(22, 161, 231);
+	border-radius:0.5rem;
+	max-width:28rem;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 16px solid transparent;	
+	border-top-color: rgb(22, 161, 231);
+	border-bottom: 0;
+	margin-left: -16px;
+	margin-bottom: -16px;
+}
+
+.intro:hover{
+	max-width:32rem;
+	margin-left:30rem;
+	margin-top:3rem;
+	padding:1.4rem;
+		background-color: rgba(255, 255, 255, 1);
+		color: #000;
+		border-radius: 8px;
+		box-shadow: 0px 0px 0px 2px rgb(102, 168, 218),
+		8px 8px 0px 0px rgb(90, 169, 208);
+}
+
+	.heading-art:hover{
+		color:rgb(221, 25, 74);
+		font-size:12.3rem;
+	}
+
+	.article-info{
+		display: flex;
+		flex-direction:row;
+		font-family:"nunito",sans-serif;
+		font-size:1.5rem;
+		gap:3rem;
+	}
+
+	
