--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -1,242 +1,125 @@
-/*general*/
-*{
-	background-color:black;
-	color:white;
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk&display=swap');
+
+:root{
+	/* colors */
+	--background-color:beige;
+	--text-color:#121212;
+
+	/* typefaces */
+	--font-family:"Space Grotesk",serif;
+	--nav-font-size:1rem;
+	--h1-font-size:1rem;
 }
 body{
-	font-family: "Inter", sans-serif;
-	padding-left: 100px;
-	padding-top:5px;
-	text-align: start;
-	border: solid white 30px;
+	background-color: var(--background-color);
 }
 
-section{
-	background-color:white;
-}
-em{
-	font-style: italic;
-}
-
-/*paragraph styles*/
-p{
-	line: height 1.6;
-	text-indent:40px;	
-}
-
-p:nth-child(1){
-	margin-top:80px;
-}
-
-p:nth-child(even){
-	margin-top:20px;
-	margin-bottom:20px;
-}
-
-
-/*paragraph styles*/
-blockquote{
-	font-family:"Poppins",sans-serif;
-	font-weight:bolder;
-	font-size:25px;
-	font-style: italic;
-	color: #605243;
-	line-height: 40px;
-	margin-top:50px;
-	margin-bottom:20px;
-}
-
-/*headings*/
-h2{
-	margin-left:-43px;
-	font-size: 40px;
-	font-weight:bold;
-	margin-bottom:20px;
-	padding-left: 48px;
-}
-
-h3{
-	font-weight:bolder;
-	padding-left: -20px;
-	margin-bottom:0px;
-	margin-top:150px;
-}
-
-article{
-	max-width:700px;
-}
-
-/*footer*/
-footer{
-	font-size: 1rem;
-	margin-right:100px; 
-	margin-bottom:50px;
-	margin-top:50px;
-	padding-left:auto;
-}
-
-summary{
-	background-color:white;
-	color:black;
-	border-radius:2rem;
-	padding:3rem;
-	margin-top:2rem;
-	max-width:70rem;
-}
-/*author and titles styles*/
-.author-title{
-	font-size:1.2rem;
-	font-weight:500;
-}
-
-#author-name{
-	font-size:1.5rem;
-	margin-top:100px;
-	margin-left:-10px;
-	margin-bottom:20px;
-	margin-right:100px;
-}
-
-
-#article-date{
-	margin-bottom:50px;	
-	margin-left:-50px;
-}
-
-.remKoolhaas{
-	font-family:"Poppins",sans-serif;
-	font-weight:bolder;
-	font-size:25px;
-	font-style: italic;
-	color: #605243;
-	line-height: 50px;
-}
-
-.author-box{
-	background-color:black;
-	color:white;
-	outline-style:solid;
-	outline-color: white;
-	border-radius: 5px;
-	font-family:'Space Grotesk', serif;
-	line-height:1.7rem;
-	padding:1.5rem;
-	max-width:20rem;
-}
-
-/*article-and-reading-response-styles*/
-.p3{
-	margin-top:80px;
-	margin-bottom:20px;
-}
-
-#reading-response{
-	font-family:inter, sans-serif;
-	font-weight:50px;
-	margin-left: auto;
-	padding-right:50px;
-	margin-right:100px;
-	font-size:18px;
-	margin-top: 100px;
-	margin-bottom:70px;
-	padding-left:30px;
-}
-
-.W::first-letter{
-	font-size:2rem;
-	font-weight:400;
-}
-
-/* link-and-citation-styles*/
-.link{ 
-	margin-top:10px;
-	font-weight:bold;
-	font-size:16px;
-	text-decoration-line:underline;
-	color: #605243
-}
-
-#citation{
-	text-align: center;
-}
-
-/*scroll-button-styles */
-#scroll-top {
-	position: fixed;
-	padding:0 8px;
-	bottom: 35px;
-	right: 30px;
-	border: none;
-	outline: none;
-	background-color: #000000; 
-	color: white;
-	cursor: pointer; 
-	border-radius: 10px;
-	font-size: 12px; 
-  }	
-  
-#scroll-top:hover {
-	background-color: #555; /* Dark-grey background when hover */
-}
-
-/*title-art*/
-.verticalline{
-	border-left:6px solid #605243;
-	height: 163px;
-	position: absolute;
-	margin-left: 225px;
-}
-
-#title-art{
-	font-family:"Playfair Display", serif;
-	font-size:100px;
-	font-weight:bolder;
-	margin-top:142px;
-	position: relative;
-	height:400px;
-}
-
-#title-art .letter{
-	position: absolute;
-}
-
-#title-art > .letter:nth-child(1){
-	left:190px;
-	transform: rotate3d(20, 10, -2, -10deg);	
-}
-
-#title-art > .letter:nth-child(2){
-	top:60px;
-	left:159px;
-	transform: rotate3d(50, 5, 10, 0deg);
-}
-
-#title-art> .letter:nth-child(3){
-	top:115px;
-	left:130px;
-	transform: rotate3d(0, 4,-2, -10deg);
-}
-
-#title-art> .letter:nth-child(4){
-	top:170px;
-	left:105px;
-	transform: rotate3d(1,0,50,5deg);
-}
-
-#title-art> .letter:nth-child(5){
-	top:240px;
-	left:145px;
-	transform: rotate3d(10,-50,50,2deg);
-}
-
-#title-art> .letter:nth-child(6){
-	top:290px;
-	left:197px;
-	transform: rotate3d(0,0,-20, -100deg);
-}
-
-#title-art> .letter:nth-child(7){
+h1{
+	font-family:var(--font-family);
 	font-size:4rem;
-	top:350px;
-	left:25rem;
+	color:#121212;
+	margin:1.5rem;
 }
+
+.heading-art{
+	font-family:'Space Grotesk', serif;
+}
+
+p{
+	font-family:"Roboto Mono", monospace;
+	font-size:1rem;
+	line-height:1.8rem;
+	margin-left:1.5rem;
+	margin-right:0.6rem;
+}
+.header{
+	font-family:var(--font-family);
+	font-size:var(--nav-font-size);
+	margin:2rem;
+	display:flex;
+	justify-content:space-between;
+	flex-direction:row;
+	text-transform: uppercase;
+}
+
+/* NAV BAR */
+.nav-container {
+	overflow: hidden;
+	display: flex;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	background-color:white;
+	outline-style:solid;
+	outline-color:#121212;
+	border-radius:4px;
+}
+
+.nav-item {
+	background-color: white;
+	justify-content: center;
+	padding:1rem;
+	text-align: center;
+	font-size:1.3rem;
+}
+
+.article-info{
+	display: flex;
+	flex-direction:row;
+	font-family:"nunito",sans-serif;
+}
+details{ 
+	margin:1rem;
+	background-color:#121212;
+	color:white;
+	padding:1rem;
+	border-radius:5px;
+	font-family: 'Space Grotesk', serif;
+	margin:1.5rem;
+} 
+
+blockquote{
+	background-color:white;
+	padding:0.3rem;
+	border-left:8px solid rgba(218, 102, 123, 1);
+	border-radius:5px;
+}
+
+blockquote:hover{
+	background-color:white;
+	padding:0.3rem;
+	border-left:8px solid #52b9d5 ;
+	border-radius:5px;
+	transition:0.5s;
+	rotate:2deg;
+}
+
+blockquote p{
+	transition:0.5s;
+}
+
+blockquote p:hover{
+	background-color:#white;
+	color:black;
+	rotate:2deg;
+}
+
+blockquote:hover .quote-popup{
+	background-color:black;
+}
+
+@media (min-width:650px){
+	h1{
+		font-size:9.5rem;
+		line-height:9rem;
+	}
+	details{
+		max-width:20rem;
+		margin-top:0rem;
+		}
+	
+	@media (min-width:1024px){
