--- a/Stylesheets/article-2.css
+++ b/Stylesheets/article-2.css
@@ -1,9 +1,39 @@
-/* fonts */
-/* @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Honk&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+	/* colors */
+	--background-color:beige;
+	--text-color:#121212;
+	--h2-font-color:#121212; 
+
+	/* typefaces */
+	--font-family:"Space Grotesk",serif;
+	--nav-font-size:1.5rem;
+	--h1-font-size:1rem;
+}
+
+*{
+	background-color:beige;
+}
+
+/* heading */
+h1{
+	font-size:9rem;
+	margin-top:10rem;
+	margin-bottom:3rem;
+}
+.nav{
+	font-family:var(--font-family);
+	font-size:var(--nav-font-size);
+	margin:2rem;
+	display:flex;
+	justify-content:space-between;
+	flex-direction:row;
+	text-transform: uppercase;
+}
 
 article{
 	background: linear-gradient(270deg, #b2e4f7, #f3ccf7);
@@ -75,15 +105,6 @@ h1 {
 }
 
 /* nav-bar */
-nav{
-	background-color:black;
-}
-nav a {
-	font-family:"nunito",sans-serif;
-	font-size:1rem;
-	color:white;
-	padding:3rem;
-}
 
 #title{
 	font-family:"Honk", serif;
@@ -91,58 +112,6 @@ nav a {
 }
 
 /* nav bar */
-.left-nav{
-	display:inline;
-}
-
-.right-nav{
-	display:inline;
-	float:right;
-}
-
-.right-nav ul{
-	display:none;
-}
-
-
-.right-nav, .right-nav ul{
-	list-style-type: style none;
-	background-color:white;
-	color:black;
-}
-
-.right-nav li{
-	float: left;
-	position: relative;
-	width:100%;
-}
-
-.right-nav ul{
-	position: absolute;
-	display:none;
-	width:100%;
-}
-
-.right-nav ul li{
-	float:none;
-}
-
-.right-nav a:link, .right-nav a:visited {
-	display: block;
-	font-family: 'poppins', sans-serif;
-	font-size: 0.75em;
-	text-align: left;
-	text-decoration: none;
-	color: #000;
-	}
-
-.right-nav li:hover {
-	background-color:grey;
-	}
-
-.right-nav li:hover ul{
-	display: block;
-}
 
 .article-info{
 	display: flex;
@@ -180,8 +149,8 @@ nav a {
 	position:sticky;
 	top: 0;
 	padding:2rem;
-	background-color:black;
-	color:white;
+	background-color:white;
+	color:#121212;
 }
 .emphasis-word{
 	background-color:yellow;
@@ -217,4 +186,17 @@ p{
 	transition:0.5s;
 }
 
+@media (min-width:1000px){
+.nav{
+	font-family:"Space Grotesk",serif;
+	font-size:1rem;
+	margin:2rem;
+	display:flex;
+	justify-content:space-between;
+	flex-direction:row;
+	text-transform: uppercase;
+}
 
+.article-info{
+	font-size:
+}
