--- a/Stylesheets/common.css
+++ b/Stylesheets/common.css
@@ -1,18 +1,39 @@
-/* :root {
-	font-size: 16px;
-	--root-size: 1.2rem;
+
+/* typefaces */
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
+
+/* paragraph-fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+
+
+:root{
+	/* colors */
+	--background-color:beige;
+	--text-color:#121212;
+
+	/* typefaces */
+	--font-family:"Space Grotesk",serif;
+	--nav-font-size:1rem;
+	--h1-font-size:1rem;
 }
 
-/* * {
-	margin-top: 0.3em;
-} */
+body{
+	background-color: var(--background-color);
+}
 
+h1{
+	font-family:var(--font-family);
+	Color:var(--text-color)
+}
 
-/* @media (min-width:430px){
-	:root{
-		--font-size:16px;
-		--side-padding:50px;
-	}
+h2{
+	font-family:var(--font-family);
+}
 
-	 */
-} */
+header{
+	background-color: beige;
+	padding-left:3rem;
+}
+
