--- a/Stylesheets/homepage.css
+++ b/Stylesheets/homepage.css
@@ -1,13 +1,4 @@
 
-/* typefaces */
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
-
-/* paragraph-fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-
-
 :root{
 	--font-family:'Space Grotesk', serif;
 	--font-paragraph:font-family: "Roboto Mono", monospace;
@@ -15,34 +6,27 @@
 	--background-color:beige;
 }
 
-*{
-	background-color: beige;
-}
 
 /* general styles */
+*{
+	background-color: var(--background-color);
+}
+
 body{
-	background-color: black;
+	background-color: var(--background-color);
 	color: black;
 	margin:auto;
 }
 
 h1{
-	font-family:"Space Grotesk", serif;
 	font-size:4rem;
 	font-weight:bold;
-	Color:#121212;
 }
 
-
-	h2{
-		font-family:'poppins', sans-serif;
-		font-size:30px;
-		max-width:35rem;
-		font-weight:bold;
-	}
-header{
-	background-color: beige;
-	padding-left:3rem;
+h2{
+	font-size:30px;
+	max-width:35rem;
+	font-weight:bold;
 }
 
 nav{
@@ -322,6 +306,7 @@ footer{
 			box-shadow: 0px 0px 0px 2px rgba(218,102,123,1),
 		8px 8px 0px 0px rgba(218,102,123,1);
 	}
+}
 
 	
 
